--- a/style.css
+++ b/style.css
@@ -42,6 +42,39 @@ body {
 }
 
 
+
+.progress-bar-container{
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 200;
+}
+progress[value]::-webkit-progress-value {
+    background-color: #f2f2f2;
+}
+#progress-bar {
+    width: 30%;
+    margin-top: 0.5%;
+    height: 2%;
+    background-color: #ffffff;
+    transition: width 0.2s ease;
+
+}
+
+label {
+    color: white;
+    font-size: 2rem;
+}
+
+
 .section {
     
     min-height: 100vh;
@@ -136,6 +169,7 @@ body {
 #p0 .title {
     width: 100%;
     color: #2a2b27;
+    
     font-size: 13em;
     font-family: "helvetica";
     font-weight: bold;
