--- a/style.css
+++ b/style.css
@@ -278,17 +278,31 @@ label {
 }
 .scene-right #scene5{
     position: absolute;
-    width: 10%;
+    width: 40%;
     top: 150px;
     left :5%;
 }
 .scene-right #scene7{
     position: absolute;
-    width: 40%;
-    top: 70px;
-    left :2%;
+    width: 22%;
+    top: 150px;
+    left :15%;
+  
+}
+
+#p9 .title{
+    width: 80%;
+    left: 10%;
+    color: #2a2b27;
+    
+    font-size: 3em;
+ 
+    margin-top: 100px;
+    position: relative;
+    text-align: center;
     z-index: 100;
 }
+
 #container3D {
     position: fixed;
     inset: 0;
@@ -335,4 +349,22 @@ label {
     #container3D {
         position: absolute;
     }
+}
+
+.footer{
+    width: 100%;
+    padding: 70px 100px 20px;
+
+}
+
+.footer a i{
+    padding: 10px;
+    font-size: 2em;
+    color: black;
+    
+}
+
+.footer p{
+    display: inline-block; 
+    right: 0;
 }
